--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,12 @@
   display: flex;
   flex-direction: column;
 }
+
+body {
+  font-family: 'Noto Sans', 'Noto Sans JP', sans-serif;
+  font-size: large;
+}
+
+textarea {
+  font-family: 'Consolas', monospace;
+}
